--- a/Marico/index.html
+++ b/Marico/index.html
@@ -48,14 +48,21 @@
 						Turn your audience into email and <br> text message subscribers.
 					</h3>
 					<div class="intro__buttons">
-						<button class="intro__button">
+						<button class="intro__button intro__button-active">
 							Get Started Now
 						</button>
-						<button class="intro__button intro__button-disable">
+						<button class="intro__button">
 							View A Demo
 						</button>
 					</div>
-					<p class="intro__text"><img class="intro__icon" src="./img/intro__icon.png" alt="#"> creators have already started</p>
+					<div class="intro__online">
+						<div>
+							<img class="intro__icon" src="./img/intro__icon.png" alt="#">
+						</div>
+						<span class="intro__text">
+							<span class="intro__text-number">1000 +</span> creators have already started
+						</span>
+					</div>
 				</div>
 			</div>
 		</div>
