Tryied to make smth

--- a/Marico/index.html
+++ b/Marico/index.html
@@ -56,7 +56,7 @@
 						</button>
 					</div>
 					<div class="intro__online">
-						<div>
+						<div class="intro__container">
 							<img class="intro__icon" src="./img/intro__icon.png" alt="#">
 						</div>
 						<span class="intro__text">
